<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shapes.Level9Shapes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="302dp">

        <ImageView
            android:id="@+id/btnHelp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:onClick="help"
            android:src="@mipmap/help"

            ></ImageView>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:src="@mipmap/hexagon"></ImageView>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Who am I?"
            android:textColor="#000000"
            android:textSize="60dp"></TextView>

        <RadioGroup
            android:id="@+id/radioShapes1"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioOctogone"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/octogone"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="25dp"
                android:textStyle="bold"></RadioButton>

            <RadioButton
                android:id="@+id/radioHexagon"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/hexagon"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="25dp"
                android:textStyle="bold"

                ></RadioButton>

            <RadioButton
                android:id="@+id/radioParallelograme"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/parallelograme"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="25dp"
                android:textStyle="bold"></RadioButton>
        </RadioGroup>

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#E4DFE3"
            android:text="@string/Choose"
            android:textColor="#000000"
            android:textSize="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>